--- a/Renai Portfolio/DeVeraCVstyle.css
+++ b/Renai Portfolio/DeVeraCVstyle.css
@@ -140,12 +140,22 @@ p {
 }
 
 */
-.hobbies-item {
-
-	width: 250;
-	height: 250;
+.hobbies-container{
+	text-align: center;
+	padding: 10px 20px;
 }
 
+
+.hobbies-item {
+	width: 80%;
+  	background-color: white;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+/*
+	width: 250;
+	height: 250;
+
+*/
 .photography-body {
 	height: 300px;
 }
