--- a/hpstyle.css
+++ b/hpstyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -35,4 +37,9 @@ a {
   font-size: 30px;
   text-align: center;
   color: white;
+}
+
+img {
+  width: 300px;
+  height: 300px;
 }
